# desafio-tecnico-frexco

./: pyproject.toml
frexco/: db.sqlite3
frexco/frexco/: settings.py  urls.py
frexco/usuarios/: models.py  urls.py  views.py
frexco/usuarios/migrations/: 0001_initial.py  0002_alter_usuario_senha.py  0003_alter_usuario_data_nascimento.py  0004_alter_usuario_login.py
